# robust-semantic-agent

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  TESTING.md  pyproject.toml  pytest.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
.specify/memory/: constitution.md
configs/: default.yaml  risk.yaml  safety.yaml  thresholds.yaml
docs/: PROJECT_FILES.md  THEORY_IMPROVEMENTS.md  gotchas.md  theory.md  verified-apis.md
exploration/: 001_cvxpy_cbf_mwe.py  001_particle_filter.py  002_cvar.py  003_qp_solver.py  003_tools.md  004_belnap.py  004_belnap_logic_research.md  005_cvar_research.md  particle_filter_research.md  production_verification.py
reports/calibration/: calibration_results.json
reports/evaluation_test/: summary.json
reports/evaluation_test/risk/: cvar_results.json
reports/evaluation_test/safety/: violation_stats.json
reports/verification/: summary.json
reports/verification/risk/: cvar_results.json
reports/verification/safety/: violation_stats.json
robust_semantic_agent/cli/: calibrate.py  evaluate.py  rollout.py
robust_semantic_agent/core/: belief.py  config.py  credal.py  episode.py  messages.py  query.py  semantics.py
robust_semantic_agent/envs/forbidden_circle/: env.py  safety.py
robust_semantic_agent/policy/: agent.py  planner.py
robust_semantic_agent/reports/: calibration.py  credal.py  risk.py  safety.py
robust_semantic_agent/risk/: cvar.py
robust_semantic_agent/safety/: cbf.py
specs/002-full-prototype/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-full-prototype/checklists/: requirements.md
tests/integration/: test_contradictions.py  test_end_to_end.py  test_navigation.py  test_query_action.py
tests/performance/: test_profiling.py
tests/unit/: test_belief.py  test_calibration.py  test_credal.py  test_query.py  test_risk.py  test_safety.py  test_semantics.py
